// Vitest Snapshot v1

exports[`basic > -1+2*6/3+5 1`] = `
{
  "left": {
    "left": {
      "operator": "-",
      "right": {
        "type": "value",
        "value": "1",
      },
      "type": "unary",
    },
    "operator": "+",
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "*",
        "right": {
          "type": "value",
          "value": "6",
        },
        "type": "binary",
      },
      "operator": "/",
      "right": {
        "type": "value",
        "value": "3",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "+",
  "right": {
    "type": "value",
    "value": "5",
  },
  "type": "binary",
}
`;

exports[`basic > 1 + 2^3^4*5-6 1`] = `
{
  "left": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "^",
        "right": {
          "left": {
            "type": "value",
            "value": "3",
          },
          "operator": "^",
          "right": {
            "type": "value",
            "value": "4",
          },
          "type": "binary",
        },
        "type": "binary",
      },
      "operator": "*",
      "right": {
        "type": "value",
        "value": "5",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "-",
  "right": {
    "type": "value",
    "value": "6",
  },
  "type": "binary",
}
`;

exports[`basic > prefix nesting 1`] = `
{
  "left": {
    "operator": "+",
    "right": {
      "operator": "-",
      "right": {
        "type": "value",
        "value": "1",
      },
      "type": "unary",
    },
    "type": "unary",
  },
  "operator": "-",
  "right": {
    "operator": "+",
    "right": {
      "operator": "-",
      "right": {
        "operator": "+",
        "right": {
          "type": "value",
          "value": "2",
        },
        "type": "unary",
      },
      "type": "unary",
    },
    "type": "unary",
  },
  "type": "binary",
}
`;

exports[`conditional operation > 1+ 2  *3 ? 1+1 : 2  -1 1`] = `
{
  "condition": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "left": {
        "type": "value",
        "value": "2",
      },
      "operator": "*",
      "right": {
        "type": "value",
        "value": "3",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "falseBranch": {
    "left": {
      "type": "value",
      "value": "2",
    },
    "operator": "-",
    "right": {
      "type": "value",
      "value": "1",
    },
    "type": "binary",
  },
  "trueBranch": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "type": "value",
      "value": "1",
    },
    "type": "binary",
  },
  "type": "conditional",
}
`;

exports[`conditional operation > conditional chains 1`] = `
{
  "condition": {
    "type": "value",
    "value": "condition1",
  },
  "falseBranch": {
    "condition": {
      "type": "value",
      "value": "condition2",
    },
    "falseBranch": {
      "condition": {
        "type": "value",
        "value": "condition3",
      },
      "falseBranch": {
        "type": "value",
        "value": "value4",
      },
      "trueBranch": {
        "type": "value",
        "value": "value3",
      },
      "type": "conditional",
    },
    "trueBranch": {
      "type": "value",
      "value": "value2",
    },
    "type": "conditional",
  },
  "trueBranch": {
    "type": "value",
    "value": "value1",
  },
  "type": "conditional",
}
`;

exports[`conditional operation > conditional chains 2`] = `
{
  "condition": {
    "type": "value",
    "value": "condition1",
  },
  "falseBranch": {
    "condition": {
      "type": "value",
      "value": "condition3",
    },
    "falseBranch": {
      "condition": {
        "type": "value",
        "value": "condition5",
      },
      "falseBranch": {
        "type": "value",
        "value": "false5",
      },
      "trueBranch": {
        "type": "value",
        "value": "true5",
      },
      "type": "conditional",
    },
    "trueBranch": {
      "condition": {
        "type": "value",
        "value": "condition4",
      },
      "falseBranch": {
        "type": "value",
        "value": "false4",
      },
      "trueBranch": {
        "type": "value",
        "value": "true4",
      },
      "type": "conditional",
    },
    "type": "conditional",
  },
  "trueBranch": {
    "condition": {
      "type": "value",
      "value": "condition2",
    },
    "falseBranch": {
      "type": "value",
      "value": "false2",
    },
    "trueBranch": {
      "type": "value",
      "value": "true2",
    },
    "type": "conditional",
  },
  "type": "conditional",
}
`;

exports[`conditional operation > true ? 1 : 2 1`] = `
{
  "condition": {
    "type": "value",
    "value": "true",
  },
  "falseBranch": {
    "type": "value",
    "value": "2",
  },
  "trueBranch": {
    "type": "value",
    "value": "1",
  },
  "type": "conditional",
}
`;

exports[`error handling > 1 2 1`] = `
{
  "type": "value",
  "value": "1",
}
`;

exports[`function call > fn1() 1`] = `
{
  "args": [],
  "function": {
    "type": "value",
    "value": "fn1",
  },
  "type": "fnCall",
}
`;

exports[`function call > fn1(arg1) + fn2(arg1, arg2) + fn3(arg1,) 1`] = `
{
  "left": {
    "left": {
      "args": [
        {
          "type": "value",
          "value": "arg1",
        },
      ],
      "function": {
        "type": "value",
        "value": "fn1",
      },
      "type": "fnCall",
    },
    "operator": "+",
    "right": {
      "args": [
        {
          "type": "value",
          "value": "arg1",
        },
        {
          "type": "value",
          "value": "arg2",
        },
      ],
      "function": {
        "type": "value",
        "value": "fn2",
      },
      "type": "fnCall",
    },
    "type": "binary",
  },
  "operator": "+",
  "right": {
    "args": [
      {
        "type": "value",
        "value": "arg1",
      },
    ],
    "function": {
      "type": "value",
      "value": "fn3",
    },
    "type": "fnCall",
  },
  "type": "binary",
}
`;

exports[`function call > nested 1`] = `
{
  "args": [
    {
      "args": [
        {
          "args": [
            {
              "type": "value",
              "value": "arg4",
            },
          ],
          "function": {
            "type": "value",
            "value": "fn4",
          },
          "type": "fnCall",
        },
        {
          "type": "value",
          "value": "arg3",
        },
      ],
      "function": {
        "type": "value",
        "value": "fn3",
      },
      "type": "fnCall",
    },
  ],
  "function": {
    "args": [
      {
        "args": [
          {
            "type": "value",
            "value": "arg2",
          },
        ],
        "function": {
          "type": "value",
          "value": "fn2",
        },
        "type": "fnCall",
      },
      {
        "type": "value",
        "value": "arg1",
      },
    ],
    "function": {
      "type": "value",
      "value": "fn1",
    },
    "type": "fnCall",
  },
  "type": "fnCall",
}
`;

exports[`parenthesis > ((1))+1 1`] = `
{
  "left": {
    "type": "value",
    "value": "1",
  },
  "operator": "+",
  "right": {
    "type": "value",
    "value": "1",
  },
  "type": "binary",
}
`;

exports[`parenthesis > (-1 + 2) * 3 - -4 1`] = `
{
  "left": {
    "left": {
      "left": {
        "operator": "-",
        "right": {
          "type": "value",
          "value": "1",
        },
        "type": "unary",
      },
      "operator": "+",
      "right": {
        "type": "value",
        "value": "2",
      },
      "type": "binary",
    },
    "operator": "*",
    "right": {
      "type": "value",
      "value": "3",
    },
    "type": "binary",
  },
  "operator": "-",
  "right": {
    "operator": "-",
    "right": {
      "type": "value",
      "value": "4",
    },
    "type": "unary",
  },
  "type": "binary",
}
`;

exports[`parenthesis > 2*(3-1) 1`] = `
{
  "left": {
    "type": "value",
    "value": "2",
  },
  "operator": "*",
  "right": {
    "left": {
      "type": "value",
      "value": "3",
    },
    "operator": "-",
    "right": {
      "type": "value",
      "value": "1",
    },
    "type": "binary",
  },
  "type": "binary",
}
`;

exports[`parenthesis > 2*(9*(((2))+1))-1 1`] = `
{
  "left": {
    "left": {
      "type": "value",
      "value": "2",
    },
    "operator": "*",
    "right": {
      "left": {
        "type": "value",
        "value": "9",
      },
      "operator": "*",
      "right": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "+",
        "right": {
          "type": "value",
          "value": "1",
        },
        "type": "binary",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "-",
  "right": {
    "type": "value",
    "value": "1",
  },
  "type": "binary",
}
`;
